fixing text-alignment

--- a/product/style.css
+++ b/product/style.css
@@ -1,3 +1,12 @@
+th {
+  text-align: center;
+}
+td {
+  text-align: right;
+}
+td.left {
+  text-align: left;
+}
 .feedback {
   background-color: pink;
   padding: 5px;
